# orgset_transposer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/orgset_transposer/: cli.py
tests/: test_smoke.py
